Maquetacion flex menu lateral

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   <body>
     <div class="grid-container">
       <header>Header</header>
-      <menu> Menú lateral </menu>
+      <menu>
+        <div class="categories container-flex">
+          <h4 class="categories-title">Categorías</h4>
+          <p class="categories-category">Guitarras (5)</p>
+          <p class="categories-category">Bajos (2)</p>
+          <p class="categories-category">Baterías (3)</p>
+          <p class="categories-category">Amplificadores (8)</p>
+        </div>
+      </menu>
       <main>Contenido principal</main>
       <footer>Footer</footer>
     </div>
