Maquetacion grilla de productos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
           <p class="categories-category">Amplificadores (8)</p>
         </div>
       </menu>
-      <main>Contenido principal</main>
+      <main>
+        <div class="grid-products">
+          <p class="products-product">Product 1</p>
+          <p class="products-product">Product 2</p>
+          <p class="products-product">Product 3</p>
+          <p class="products-product">Product 4</p>
+          <p class="products-product">Product 5</p>
+          <p class="products-product">Product 6</p>
+          <p class="products-product">Product 7</p>
+          <p class="products-product">Product 8</p>
+          <p class="products-product">Product 9</p>
+        </div>
+      </main>
       <footer>Footer</footer>
     </div>
   </body>
