Estructura de navbar y footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="grid-container">
-      <header>Header</header>
+      <header class="ecommerce-title">
+        <h2>Ecommerce de Instrumentos Musicales</h1>
+      </header>
       <menu>
         <div class="categories container-flex">
           <h4 class="categories-title">Categorías</h4>
@@ -24,14 +26,11 @@
           <p class="products-product">Product 2</p>
           <p class="products-product">Product 3</p>
           <p class="products-product">Product 4</p>
-          <p class="products-product">Product 5</p>
-          <p class="products-product">Product 6</p>
-          <p class="products-product">Product 7</p>
-          <p class="products-product">Product 8</p>
-          <p class="products-product">Product 9</p>
         </div>
       </main>
-      <footer>Footer</footer>
+        <footer class="ecommerce-footer">
+          <p>@Ecommerce de Instrumentos Musicales</p>
+        </footer>
     </div>
   </body>
 </html>
