Estructura principal de cards

--- a/index.html
+++ b/index.html
@@ -22,10 +22,31 @@
       </menu>
       <main>
         <div class="grid-products">
-          <p class="products-product">Product 1</p>
-          <p class="products-product">Product 2</p>
-          <p class="products-product">Product 3</p>
-          <p class="products-product">Product 4</p>
+          <div class="product-card">
+            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <p class="product-name">Fender Stratocaster</p>
+            <p class="product-price">$1.079.000</p>
+            <button class="product-buy">Comprar</button>
+          </div>
+          <div class="product-card">
+            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <p class="product-name">Fender Stratocaster</p>
+            <p class="product-price">$1.079.000</p>
+            <button class="product-buy">Comprar</button>
+          </div>
+          <div class="product-card">
+            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <p class="product-name">Fender Stratocaster</p>
+            <p class="product-price">$1.079.000</p>
+            <button class="product-buy">Comprar</button>
+          </div>
+          <div class="product-card">
+            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <p class="product-name">Fender Stratocaster</p>
+            <p class="product-price">$1.079.000</p>
+            <button class="product-buy">Comprar</button>
+          </div>
+          
         </div>
       </main>
         <footer class="ecommerce-footer">
