Mejora en grid de productos

--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
       <menu>
         <div class="categories container-flex">
           <h4 class="categories-title">Categorías</h4>
-          <p class="categories-category">Guitarras (5)</p>
-          <p class="categories-category">Bajos (2)</p>
-          <p class="categories-category">Baterías (3)</p>
-          <p class="categories-category">Amplificadores (8)</p>
+          <p class="categories-category">Eléctricas(5)</p>
+          <p class="categories-category">Acústicas (2)</p>
+          <p class="categories-category">Electroacústicas (8)</p>
+          <p class="categories-category">Packs (3)</p>
         </div>
       </menu>
       <main>
         <div class="grid-products">
           <div class="product-card">
-            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <img src="./assets/img/es335.jpg" alt="Fender Stratocaster">
             <p class="product-name">Fender Stratocaster</p>
             <p class="product-price">$1.079.000</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <img src="./assets/img/lespaul.png" alt="Fender Stratocaster">
             <p class="product-name">Fender Stratocaster</p>
             <p class="product-price">$1.079.000</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <img src="./assets/img/ltd.jpg" alt="Fender Stratocaster">
             <p class="product-name">Fender Stratocaster</p>
             <p class="product-price">$1.079.000</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/FenderStratocaster.jpg" alt="Fender Stratocaster">
+            <img src="./assets/img/acustica.jpg" alt="Fender Stratocaster">
             <p class="product-name">Fender Stratocaster</p>
             <p class="product-price">$1.079.000</p>
             <button class="product-buy">Comprar</button>
