Mejora en cards, estilos y footer

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mi Ecommerce</title>
+    <title>E-commerce Guitarras</title>
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/img/favicon.png">
+    <script src="https://kit.fontawesome.com/67f6c5820c.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
     <div class="grid-container">
       <header class="ecommerce-title">
-        <h2>Ecommerce de Instrumentos Musicales</h1>
+        <h2>E-commerce Guitarras</h1>
       </header>
       <menu>
         <div class="categories container-flex">
           <h4 class="categories-title">Categorías</h4>
-          <p class="categories-category">Eléctricas(5)</p>
+          <p class="categories-category">Eléctricas (5)</p>
           <p class="categories-category">Acústicas (2)</p>
           <p class="categories-category">Electroacústicas (8)</p>
           <p class="categories-category">Packs (3)</p>
@@ -23,34 +26,40 @@
       <main>
         <div class="grid-products">
           <div class="product-card">
-            <img src="./assets/img/es335.jpg" alt="Fender Stratocaster">
-            <p class="product-name">Fender Stratocaster</p>
-            <p class="product-price">$1.079.000</p>
+            <img src="./assets/img/es335.jpg" alt="Epiphone ES-339">
+            <p class="product-name">Epiphone ES-339</p>
+            <p class="product-price">$699.900</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/lespaul.png" alt="Fender Stratocaster">
-            <p class="product-name">Fender Stratocaster</p>
-            <p class="product-price">$1.079.000</p>
+            <img src="./assets/img/lespaul.png" alt="Epiphone Les Paul Slash">
+            <p class="product-name">Epiphone Les Paul Slash</p>
+            <p class="product-price">$999.900</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/ltd.jpg" alt="Fender Stratocaster">
-            <p class="product-name">Fender Stratocaster</p>
-            <p class="product-price">$1.079.000</p>
+            <img src="./assets/img/ltd.png" alt="LTD TL6N NT">
+            <p class="product-name">LTD TL6N NT</p>
+            <p class="product-price">$869.900</p>
             <button class="product-buy">Comprar</button>
           </div>
           <div class="product-card">
-            <img src="./assets/img/acustica.jpg" alt="Fender Stratocaster">
-            <p class="product-name">Fender Stratocaster</p>
-            <p class="product-price">$1.079.000</p>
+            <img src="./assets/img/acustica.jpg" alt="Ibanez GA3 - Ambar">
+            <p class="product-name">Ibanez GA3 - Ambar</p>
+            <p class="product-price">$169.900</p>
             <button class="product-buy">Comprar</button>
           </div>
           
         </div>
       </main>
         <footer class="ecommerce-footer">
-          <p>@Ecommerce de Instrumentos Musicales</p>
+          <p class="ecommerce-footer-title">Encuéntranos en nuestras redes sociales</p>
+          <span class="ecommerce-footer-icons">
+            <a href="https://www.facebook.com"><i class="fa-brands fa-instagram"></i></a>
+            <a href="https://www.instagram.com"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.tiktok.com"><i class="fa-brands fa-tiktok"></i></a>
+          </span>
+          <p class="footer-copyright">Todas las imágenes son propiedad de <a class="footer-copyright-url" target="_blank" href="https://www.audiomusica.com/">Audiomusica</a></p>
         </footer>
     </div>
   </body>
