--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <menu>
         <div class="categories container-flex">
           <h4 class="categories-title">Categorías</h4>
-          <p class="categories-category">Eléctricas (5)</p>
-          <p class="categories-category">Acústicas (2)</p>
-          <p class="categories-category">Electroacústicas (8)</p>
-          <p class="categories-category">Packs (3)</p>
+          <p class="categories-category">Eléctricas <span class="categories-stock">(5)</span></p>
+          <p class="categories-category">Acústicas <span class="categories-stock">(2)</span></p>
+          <p class="categories-category">Electroacústicas <span class="categories-stock">(8)</span></p>
+          <p class="categories-category">Packs <span class="categories-stock">(3)</span></p>
         </div>
       </menu>
       <main>
